<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModelBinding"
            type="com.chatapp.info.screens.login.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.login.Login">


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:visibility="visible"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:text="@string/login"/>



            <Space
                android:layout_width="wrap_content"
                android:layout_height="60dp"/>



            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:lines="1"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:background="@color/colorWhite"
                android:hint="@string/email" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:lines="1"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:background="@color/colorWhite"
                android:hint="@string/password" />


            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:textColor="@color/colorRed"
                android:visibility="visible"
                android:text="@{viewModelBinding.error}"
                tools:text="@string/please_verify_your_email_address_then_you_can_login"/>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>


            <TextView
                android:id="@+id/btn_ResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/reset_password"/>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>


            <TextView
                android:id="@+id/btn_newAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/create_new_account"/>





        </LinearLayout>



    </FrameLayout>
</layout>